# vfxui

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: example_listbox.py  floating_progress.css  floating_progress.py
examples/experimental/: advanced_listbox_03.py  advanced_listbox_04.py  drag_and_drop_vanilla_pyside.py  hovering_popup.py  nested_dialog_objects.py
examples/getting-started/: 01_hello_world.py  02_control_layout.py  03_our_own_dialog_class.py  04_more_widget_types.py  05_callbacks.py  06_next_steps.py  07_textbox_expression.py
python/vfxui/: __init__.py  dialog.py  divider.py  filebrowser.py  floatingmessage.py  guard.py  heading.py  imagelabel.py  listbox.py  pyside.py
python/vfxui/ressources/: houdini.css  main.css  maya.css
source/vfxui/: __init__.py  _version.py
tests/: .config  .config.example
tests/python/: complexDialog.py  mocked_cmds.py  test_python_01_dialog.py  test_python_02_listbox.py  test_python_03_WrappedRow.py  test_python_04_FileBrowser.py  test_python_05_floatingmessage.py  test_python_06_heading.py
